# shell-design

./: Cargo.toml  build.rs  readme.md
src/: command.rs  helpers.rs  main.rs
src/terminal/: input.rs  mod.rs  pty.rs  renderer.rs
