[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
chrono = "0.4"
filetime = "0.2"
colored = "3.0.0"
# Terminal emulation dependencies
crossterm = "0.26.1"     # Terminal manipulation library
portable-pty = "0.8.1"   # Cross-platform PTY implementation
vt100 = "0.15.2"         # VT100 terminal emulation
dirs-next = "2.0.0"      # Cross-platform directory paths
